--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Small Love Potion SLP to Ethereum ETH and USD Price Calculator for Axie Infinity"
+      content="Small Love Potion SLP to Ethereum ETH and USD Price Calculator for Breeding in Axie Infinity"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>SLP Calculator | Axie Infinity</title>
+    <title>SLP Calculator for Breeding | Axie Infinity</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
