--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Breeding Price Calculator for Axie Infinity (SLP ETH USD)</title>
+    <title>Breeding Price Calculator for Axie Infinity (SLP, AXS, ETH, USD)</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
